--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=PI_Zambom
-spring.data.mongodb.uri=mongodb://pi_zambom/banco
+spring.data.mongodb.uri=mongodb://mongodb:27017/database
